# hc_scoring

./: .env  .gitignore  Procfile  README.md  conf.json  config.py  pyproject.toml  requirements.txt  run_dash.py  run_flask.py  wsgi.py
data/: data_test.csv  feature_importance.csv
hc_scoring/: __init__.py  assets.py  routes.py
hc_scoring/api/: explainability.py  files.py  initialization.py  models.py  transformations.py
hc_scoring/plotlydash/: dashboard.py  data.py  layout.py
hc_scoring/templates/: index.jinja2  layout.jinja2
hc_scoring_api/: config.py  data_operations.py  requirements.txt  views.py
hc_scoring_api/hc_scoring_api/: data_operations.py  views.py
hc_scoring_api/model/: columns.joblib
hc_scoring_api/templates/: index.jinja2  layout.jinja2
hc_scoring_dash/: Procfile  __init__.py  content.py  requirements.txt  sidebar.py
hc_scoring_dash/hc_scoring_dash/: __init__.py  content.py
model/: bp_trained_model.joblib
modelization/: P7_scoring.ipynb  hc_transformations.py
