[tool.poetry]
name = "hc_scoring2"
version = "0.1.0"
description = "Flask application"
readme = "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
dash = "*"
dash_table = "*"
dash_core_components = "*"
dash_html_components = "*"
dash-renderer = "*"
pandas = "*"
python-dotenv = "*"
uWSGI = "^2.0.19"
ddtrace = "^0.55.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

